2006-08-16  Katsutoshi Itoh <cut-sea@kahua.org>

	* add money-box/ tag for skel/parts-collection.kahua.

2006-08-16  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua/elem.scm:
	  Define "define-basic-element" macro, and define most of tags
	  with it.  If (define-basic-element foo) define both foo/
	  and foo:.

	* src/kahua/persistence.scm:
	  Remove a unnecessary generic function.

	* src/kahua/persistence/fs.scm:
	  Print warning message if database character encoding is not
	  compatible with gauche internal character encoding.

2006-08-14  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua/persistence.scm, src/kahua/persistence/fs.scm:
	- Now fsdb has its own character encoding in "%%character-encoding"
	  file.  If it is different with (gauche-character-encoding), do
	  conversion.
	- Now fsdb has lock file outside of database directory, and lock it
	  before open/create database.
	- Lock input/output port explicitly.
	- Clean up code.

	* src/kahua/util.scm, src/kahua-httpd.scm:
	  Moved <kahua-error> base condition from kahua-httpd.scm.

2006-08-14  Katsutoshi Itoh <cut-sea@kahua.org>

        * modify skel/proj/proj.kahua.
        * delete tests from skel/test/test.scm.in.
        * bug fix for skel/proj project template program.

2006-08-13  Katsutoshi Itoh <cut-sea@kahua.org>

	* add skel/proj/parts-collection.kahua and modify kahua-package.scm.

2006-08-07  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua-spvr.scm:
	  If no worker type passed or "" worker type passed, dispatch to
	  the first worker has 1 or greater value as :run-by-default.

2006-08-06  Katsutoshi Itoh <cut-sea@kahua.org>

	* add utility function into skel/utility.kahua.
	
2006-08-05  Tatsuya BIZENN  <bizenn@arthub.net>

	* 0.5.1 released.

2006-08-04  Tatsuya BIZENN  <bizenn@arthub.net>

	* src/kahua-httpd.scm:
	- Clean up all kind of error handling.
	- Clean up dead code.
	- Request line, method, URI, HTTP version are as parameters now.
	- Index file supported.  Now only index.html.