@@ -4,7 +4,7 @@
 ;;  Copyright (c) 2003 Time Intermedia Corporation, All rights reserved.
 ;;  See COPYING for terms and conditions of using this software
 ;;
-;; $Id: config.scm.in,v 1.8 2006/07/28 13:09:43 bizenn Exp $
+;; $Id: config.scm.in,v 1.9 2006/08/17 07:27:55 bizenn Exp $
 ;;
 ;; This is intended to be loaded by kahua servers to share common
 ;; configuration parameters.
@@ -26,6 +26,7 @@
 	  kahua-working-directory
           kahua-logpath
           kahua-pidpath
+	  kahua-spvr-pidpath
           kahua-keyserv-pidpath
 	  kahua-httpd-pidpath
           kahua-config-file
@@ -202,8 +203,10 @@
 (define (kahua-logpath filename)
   (build-path (kahua-working-directory) "logs" filename))
 
-(define (kahua-pidpath)
+(define (kahua-spvr-pidpath)
   (build-path (kahua-working-directory) "kahua-spvr.pid"))
+
+(define kahua-pidpath kahua-spvr-pidpath) ; for backward compatibility
 
 (define (kahua-keyserv-pidpath)
   (build-path (kahua-working-directory) "kahua-keyserv.pid"))
